Move state to ConfigMap from JobSet annotations

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -33,6 +33,8 @@ resources:
 # Only CR(s) which requires webhooks and are applied on namespaces labeled with 'webhooks: enabled' will
 # be able to communicate with the Webhook Server.
 #- ../network-policy
+- report_configmap.yaml
+- jobset_events_configmap.yaml
 
 # Uncomment the patches line if you enable Metrics, and/or are using webhooks and cert-manager
 patches:
