--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -17,6 +17,8 @@ metadata:
     app.kubernetes.io/name: megamon
     app.kubernetes.io/managed-by: kustomize
 spec:
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       control-plane: controller-manager
