--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,8 +1,9 @@
 resources:
 - manager.yaml
+- config.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
   newName: us-central1-docker.pkg.dev/cool-machine-learning/default/megamon
-  newTag: v0.0.12
+  newTag: v0.0.16
