--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -36,6 +36,7 @@ resources:
 - report_configmap.yaml
 - jobset_events_configmap.yaml
 - jobset_node_events_configmap.yaml
+- nodepool_events_configmap.yaml
 
 # Uncomment the patches line if you enable Metrics, and/or are using webhooks and cert-manager
 patches:
