--- a/config/dev/kustomization.yaml
+++ b/config/dev/kustomization.yaml
@@ -1,9 +1,11 @@
 resources:
 - ../default
 - ./config.yaml
+patches:
+- path: ./service_account_identity.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
   newName: us-central1-docker.pkg.dev/cool-machine-learning/default/megamon
-  newTag: v0.0.25
+  newTag: v0.0.26
