--- a/config/manager/deployment.yaml
+++ b/config/manager/deployment.yaml
@@ -1,12 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: megamon
-    app.kubernetes.io/managed-by: kustomize
-  name: system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -91,12 +82,24 @@ spec:
             cpu: 10m
             memory: 64Mi
         volumeMounts:
-        - name: config
+        - name: manager-config
           mountPath: /etc/megamon
           readOnly: true
+      - name: collector
+        image: otel/opentelemetry-collector-contrib:0.116.1
+        args:
+        - --config
+        - /etc/otelcol-contrib/config.yaml
+        - --feature-gates=exporter.googlemanagedprometheus.intToDouble
+        volumeMounts:
+        - name: collector-config
+          mountPath: /etc/otelcol-contrib/
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
       volumes:
-      - name: config
+      - name: manager-config
         configMap:
           name: manager-config
+      - name: collector-config
+        configMap:
+          name: collector-config
