Add in slice reconciler and metrics

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -30,6 +30,20 @@ rules:
   verbs:
   - get
 - apiGroups:
+  - accelerator.gke.io
+  resources:
+  - slices
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - accelerator.gke.io
+  resources:
+  - slices/status
+  verbs:
+  - get
+- apiGroups:
   - jobset.x-k8s.io
   resources:
   - jobsets
